--- a/WebApplication1/Site1.Master
+++ b/WebApplication1/Site1.Master
@@ -34,8 +34,7 @@
         <div class="hero"> 
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#">
-                    <img src="images/OIL.NS-fd1e7282.png" height="60" width="50" />
-                     Oil India Limited
+                    // icon for the company
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -46,9 +45,9 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="homepage.aspx">Home</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">About Us</a>
-                        </li>
+                        //<li class="nav-item active">
+                           // <a class="nav-link" href="#">About Us</a> // about the company
+                        //</li>
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Terms</a>
                         </li>
@@ -117,7 +116,7 @@
             <div id="footer2" class="container-fluid">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 text-center">
-                        <p style="color:whitesmoke">&copy All right Reversed. <a class="footerlinks" href="#" target="_blank">Oil India Limited</a></p>
+                        <p style="color:whitesmoke">&copy All right Reversed. <a class="footerlinks" href="#" target="_blank">Company Name</a></p>
                     </div>
                 </div>
             </div>
